--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,9 +7,12 @@
     box-sizing: border-box;
 }
 
+:root {
+    --light-gray-text-color: #aca3a3;
+}
+
 body {
     width: 100vw;
-    background-color: yellow;
     font-family: "Inter";
     min-height: 100vh;
     display: flex;
@@ -22,7 +25,6 @@ main {
     color: yellow;
     width: 500px;
     height: 500px;
-    background-color: #0b0b0b;
     border: 2px solid #656565;
     border-radius: 15px;
 }
@@ -39,4 +41,41 @@ main {
 
 .error-message {
     color: rgb(225, 83, 83);
+}
+
+label {
+    color: var(--light-gray-text-color);
+    font-size: 14px;
+    padding-block: 8px;
+    display: block;
+}
+
+form {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    border: 2px solid red;
+}
+
+form * {
+    width: 100%;
+}
+
+form input[type="text"] {
+    border: 2px solid var(--light-gray-text-color);
+    border-radius: 5px;
+    padding: 6px 8px;
+}
+
+form > button[type = "submit"] {
+    background-color: #0b0b0b;
+    border-radius: 5px;
+    font-size: 14px;   
+    font-weight: bold;
+    color: white;
+    padding: 8px 10px;
 }
