--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 * {
     margin: 0;
@@ -13,20 +13,38 @@
 
 body {
     width: 100vw;
-    font-family: "Inter";
+    font-family: "Sansation", serif;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+a {
+    font-family: "Sansation";   
+}
+
+.container {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+}
+
 main {
-    padding: 16px;
+    flex: 1;
+    padding: 64px;
+    
     color: yellow;
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     border: 2px solid #656565;
     border-radius: 15px;
+}
+
+aside {
+    width: 100%;
+    height: 100%;
+    flex: 1;
 }
 
 .message {
@@ -55,10 +73,7 @@ form {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    justify-content: center;
-    align-items: center;
     width: 100%;
-    border: 2px solid red;
 }
 
 form * {
@@ -71,11 +86,25 @@ form input[type="text"] {
     padding: 8px;
 }
 
-form > button[type = "submit"] {
+form button[type = "submit"] {
     background-color: #0b0b0b;
     border-radius: 5px;
-    font-size: 14px;   
     font-weight: bold;
     color: white;
-    padding: 10px;
+    padding: 12px;
+}
+
+.forgot-password-submit-form {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.forgot-password-div {
+    text-align: right;
+    a {
+        font-family: "Sansation";
+        color: #0b0b0b;
+    }
 }
