wip: building forgot password layout

--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -1,6 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     border: 0;
     box-sizing: border-box;
+}
+
+body {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    padding-block: 56px;
+    font-family: "Sansation";
+}
+
+main {
+    width: 500px;
+    height: 500px;
+    background-color: bisque;
+}
+
+form {
+    margin: auto;
+    padding: 16px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    border: 1px solid red;
+}
+
+form * {
+    
 }
