--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -7,19 +7,42 @@
     box-sizing: border-box;
 }
 
+:root {
+    --light-gray-text-color: #aca3a3;
+    --light-green-text-color: #527a52;
+    --lighter-green-bg: #add1ad;
+}
+
 body {
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
-    padding-block: 56px;
+    padding-block: 36px;
     font-family: "Sansation";
 }
 
 main {
     width: 500px;
     height: 500px;
-    background-color: bisque;
+}
+
+.forgot-password-round-div {
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #a3d8a3;
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.title {
+    text-align: center;
+    font-weight: 400;
+    font-size: 20px;
 }
 
 form {
@@ -28,10 +51,19 @@ form {
     width: 80%;
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    border: 1px solid red;
+    gap: 30px;
 }
 
-form * {
-    
+form input {
+    border: 2px solid var(--light-gray-text-color);
+    border-radius: 5px;
+    padding: 8px;
+}
+
+form button[type = "submit"] {
+    background-color: #0b0b0b;
+    border-radius: 5px;
+    font-weight: bold;
+    color: white;
+    padding: 12px;
 }
