--- a/src/assets/css/send-code.css
+++ b/src/assets/css/send-code.css
@@ -28,11 +28,10 @@ main {
 }
 
 .forgot-password-round-div {
-    margin: 20px auto;
+    margin: 10px auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #a3d8a3;
     border-radius: 50%;
     width: 300px;
     height: 300px;
@@ -51,7 +50,6 @@ form {
     width: 80%;
     display: flex;
     flex-direction: column;
-    gap: 30px;
 }
 
 form input {
@@ -65,5 +63,22 @@ form button[type = "submit"] {
     border-radius: 5px;
     font-weight: bold;
     color: white;
+    margin-top: 24px;
     padding: 12px;
+}
+
+.message {
+    font-weight: 400;
+    padding-block: 4px;
+    font-size: 12px;
+}
+
+.error-message {
+    color: rgb(225, 83, 83);
+}
+
+.vital-essence-logo {
+    width: 400px;
+    height: 300px;
+    object-fit: cover;
 }
