--- a/src/assets/css/send-code.css
+++ b/src/assets/css/send-code.css
@@ -52,6 +52,10 @@ form {
     flex-direction: column;
 }
 
+form label {
+    padding-bottom: 8px;
+}
+
 form input {
     border: 2px solid var(--light-gray-text-color);
     border-radius: 5px;
@@ -77,8 +81,15 @@ form button[type = "submit"] {
     color: rgb(225, 83, 83);
 }
 
-.vital-essence-logo {
-    width: 400px;
-    height: 300px;
+.vital-essence-logo-div {
+    margin: auto;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.vital-essence-logo-div img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
